# flop7

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  release-please-config.json
.github/workflows/: build.yaml
docs/: architecture.md  design.md  install.md  roadmap.md  rules.md
docs/guides/: bots.md  development.md  trackers.md
docs/rules/: flip7_rules.md
src/flop7/: __init__.py  __main__.py  cli.py
src/flop7/app/: orchestrator.py  plan.md  prompt.py  simulation.py  trackers.py
src/flop7/app/nodes/: __init__.py  base.py  game.py  home.py  setup.py  simulate.py
src/flop7/bot/: base.py  controller.py  knowledge.py  registry.py  utils.py
src/flop7/bot/models/: basic.py  omniscient.py
src/flop7/classes/: __init__.py  deck.py  player.py
src/flop7/core/classes/: __init__.py  cards.py  deck.py  player.py
src/flop7/core/engine/: actions.py  base.py  engine.py  requests.py
src/flop7/core/enum/: decisions.py  event.py
src/flop7/core/protocols/: actions.py  decisions.py  draw.py  modifier.py
src/flop7/engine/: actions.py  base.py
src/flop7/enum/: decisions.py
src/flop7/protocols/: actions.py  decisions.py  draw.py
src/flop7/simulation/: __init__.py  config.py  results.py  runner.py
src/flop7/tui/: app.py  plan.md
tests/: conftest.py  test_cli.py  test_package.py
tests/app/: test_game_nodes.py  test_orchestrator.py  test_prompt.py  test_simulate_nodes.py  test_simulation.py  test_trackers.py
tests/app/nodes/: __init__.py  test_game.py  test_home.py  test_setup.py  test_simulate.py
tests/bot/: test_basic.py  test_controller.py  test_knowledge.py  test_omniscient.py  test_registry.py  test_utils.py
tests/bot/models/: __init__.py  test_basic.py  test_omniscient.py
tests/core/classes/: test_cards.py  test_deck.py  test_player.py
tests/core/engine/: test_actions.py  test_engine.py  test_requests.py
tests/simulation/: __init__.py  test_config.py  test_results.py  test_runner.py  test_simulation.py
tests/simulation/trackers/: __init__.py  test_bust.py  test_defaults.py  test_flip7.py  test_opening_freeze.py
tests/tui/: test_app.py  test_game_screen.py  test_player_list.py  test_simulate_screen.py
tests/tui/components/: __init__.py  test_build.py
tests/tui/screens/: __init__.py  test_game.py  test_home.py
tests/tui/widgets/: __init__.py  test_card_detail.py  test_command_bar.py  test_player_list.py
tui-schema/game-view/: game-view.txt
tui-schema/home-page/: home-page.txt
(+36 files in other folders)
