[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flop7"
version = "0.1.0"
description = "An unofficial Flip 7 terminal emulator"
authors = [
    {name = "Ben Halladay"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.40.0",
]

[project.scripts]
flop7 = "flop7.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
